docker_data_2/spark_delta_hive_metastore/k8s/datanode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: datanode
  name: datanode
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: datanode
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: datanode
    spec:
      containers:
        - env:
            - name: HDFS_DATANODE_USER
              value: hdfs
            - name: HDFS_NAMENODE_USER
              value: hdfs
            - name: HDFS_SECONDARYNAMENODE_USER
              value: hdfs
          image: satish0308/datanode:latest
          name: datanode
          ports:
            - containerPort: 9864
              protocol: TCP
            - containerPort: 22
              protocol: TCP
      hostname: datanode
      restartPolicy: Always
