docker_data_2/spark_delta_hive_metastore/k8s/hive-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: hive
  name: hive
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hive
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: hive
    spec:
      containers:
        - env:
            - name: HDFS_DATANODE_USER
              value: hdfs
            - name: HDFS_NAMENODE_USER
              value: hdfs
            - name: HDFS_SECONDARYNAMENODE_USER
              value: hdfs
            - name: POSTGRES_DB
              value: metastore
            - name: POSTGRES_HOST
              value: postgres
            - name: POSTGRES_PASSWORD
              value: hivepassword
            - name: POSTGRES_USER
              value: hiveuser
            - name: TMPDIR
              value: /tmp/gunicorn
          image: satish0308/hive:latest
          name: hive-server
          ports:
            - containerPort: 10000
              protocol: TCP
            - containerPort: 10002
              protocol: TCP
      restartPolicy: Always
