docker_data_2/spark_delta_hive_metastore/k8s/hue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hue
  labels:
    io.kompose.service: hue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hue
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: hue
    spec:
      restartPolicy: Always

      containers:
        - name: hue
          image: gethue/hue:latest
          ports:
            - containerPort: 8888
              protocol: TCP
          securityContext:
            runAsGroup: 1000
            runAsUser: 1001
          volumeMounts:
            - mountPath: /hue/desktop/conf
              name: hue-conf

      volumes:
        - name: hue-cm1
          configMap:
            name: hue-cm1
        - name: hue-conf
          emptyDir: {}
