docker_data_2/spark_delta_hive_metastore/k8s/namenode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: namenode
  name: namenode
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: namenode
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: namenode
    spec:
      containers:
        - env:
            - name: CLUSTER_NAME
              value: hadoop-cluster
            - name: HADOOP_SSH_OPTS
              value: '"-o StrictHostKeyChecking=no"'
            - name: HDFS_DATANODE_USER
              value: hdfs
            - name: HDFS_NAMENODE_USER
              value: root
            - name: HDFS_SECONDARYNAMENODE_USER
              value: hdfs
          image: satish0308/namednode:latest
          name: namenode
          ports:
            - containerPort: 9870
              protocol: TCP
            - containerPort: 9000
              protocol: TCP
            - containerPort: 22
              protocol: TCP
      hostname: namenode
      restartPolicy: Always
