docker_data_2/spark_delta_hive_metastore/k8s/nodemanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: nodemanager
  name: nodemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodemanager
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: nodemanager
    spec:
      hostname: nodemanager
      restartPolicy: Always
      containers:
        - name: nodemanager
          image: satish0308/nodemanager:latest
          ports:
            - containerPort: 8042
              protocol: TCP
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Starting NodeManager...";
              $HADOOP_HOME/sbin/yarn-daemon.sh start nodemanager;
              echo "NodeManager started";
              sleep infinity
