docker_data_2/spark_delta_hive_metastore/k8s/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@admin.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: admin
          image: dpage/pgadmin4
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /pgadmin4/servers.json
              name: pgadmin-cm0
              subPath: servers.json
            - mountPath: /var/lib/pgadmin/.pgpass
              name: pgadmin-claim1
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: servers.json
                path: servers.json
            name: pgadmin-cm0
          name: pgadmin-cm0
        - name: pgadmin-claim1
          persistentVolumeClaim:
            claimName: pgadmin-claim1
