docker_data_2/spark_delta_hive_metastore/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: metastore
            - name: POSTGRES_PASSWORD
              value: hivepassword
            - name: POSTGRES_USER
              value: hiveuser
          image: postgres:13
          name: hive-metastore-postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init-hive-metastore.sql
              name: postgres-cm0
              subPath: init-hive-metastore.sql
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: init-hive-metastore.sql
                path: init-hive-metastore.sql
            name: postgres-cm0
          name: postgres-cm0
