docker_data_2/spark_delta_hive_metastore/k8s/resourcemanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: resourcemanager
  name: resourcemanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: resourcemanager
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: resourcemanager
    spec:
      containers:
        - env:
            - name: YARN_NODEMANAGER_HOST
              value: nodemanager
            - name: YARN_RESOURCEMANAGER_HOST
              value: resourcemanager
          image: satish0308/resourcemanager:latest
          name: resourcemanager
          ports:
            - containerPort: 8088
              protocol: TCP
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Starting NodeManager...";
              $HADOOP_HOME/sbin/yarn-daemon.sh start resourcemanager;
              echo "NodeManager started";
              sleep infinity
              
      hostname: resourcemanager
      restartPolicy: Always
