docker_data_2/spark_delta_hive_metastore/k8s/spark-worked-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: spark
  name: spark-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: spark
    spec:
      containers:
        - image: satish0308/spark:latest
          name: spark-worker
          command:
            - /home/spark/bin/spark-class
            - org.apache.spark.deploy.worker.Worker
            - spark://spark-master.default.svc.cluster.local:7077
          ports:
            - containerPort: 8081


      restartPolicy: Always
