docker_data_2/spark_delta_hive_metastore/k8s/datanode-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: datanode
  name: datanode
spec:
  ports:
    - name: "9864"
      port: 9864
      targetPort: 9864
    - name: "2223"
      port: 2223
      targetPort: 22
  selector:
    io.kompose.service: datanode
