docker_data_2/spark_delta_hive_metastore/k8s/hive-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: hive
  name: hive
spec:
  ports:
    - name: "10000"
      port: 10000
      targetPort: 10000
    - name: "10002"
      port: 10002
      targetPort: 10002
  selector:
    io.kompose.service: hive
