docker_data_2/spark_delta_hive_metastore/k8s/namenode-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: namenode
  name: namenode
spec:
  ports:
    - name: "9870"
      port: 9870
      targetPort: 9870
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "2222"
      port: 2222
      targetPort: 22
  selector:
    io.kompose.service: namenode
