docker_data_2/spark_delta_hive_metastore/k8s/nodemanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: nodemanager
  name: nodemanager
spec:
  ports:
    - name: "8042"
      port: 8042
      targetPort: 8042
  selector:
    io.kompose.service: nodemanager
