docker_data_2/spark_delta_hive_metastore/k8s/resourcemanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: resourcemanager
  name: resourcemanager
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8088
  selector:
    io.kompose.service: resourcemanager
