docker_data_2/spark_delta_hive_metastore/k8s/spark-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml --out k8s/
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: spark
  name: spark
spec:
  ports:
    - name: "4040"
      port: 4040
      targetPort: 4040
    - name: "4041"
      port: 4041
      targetPort: 4041
    - name: "18080"
      port: 18080
      targetPort: 18080
    - name: "5555"
      port: 5555
      targetPort: 5555
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "7077"
      port: 7077
      targetPort: 7077
  selector:
    io.kompose.service: spark
