docker_data_2/spark_delta_hive_metastore/k8s/hue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hue-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-headers: 'Cache-Control: max-age=31536000; public'
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.ingress.kubernetes.io/enable-debug: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: nginx
  rules:
    - host: hue.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hue
                port:
                  number: 8888
