docker_data_2/spark_delta_hive_metastore/k8s/ingress-hive.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hive-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: hive.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hive
                port:
                  number: 10000
