docker_data_2/spark_delta_hive_metastore/k8s/ingress-namenode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: namenode-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: namenode.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: namenode
                port:
                  number: 9870
