docker_data_2/spark_delta_hive_metastore/k8s/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8081
