docker_data_2/spark_delta_hive_metastore/k8s/ingress-spark.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: spark.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark
                port:
                  number: 8080
